# foxy-ircd

./: Cargo.toml  README.md
src/: case.rs  connection.rs  db.rs  invocation.rs  main.rs  message.rs
src/message/: parse.rs
